; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_config_parse_xresource_options.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_config_parse_xresource_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@CONFIG_XRESOURCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @config_parse_xresource_options(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32* @xcb_xrm_database_from_default(i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @CONFIG_XRESOURCES, align 4
  %13 = call i32 @__config_parse_xresource_options(i32* %11, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @CONFIG_XRESOURCES, align 4
  %16 = call i32 @__config_parse_xresource_options_dynamic(i32* %14, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @xcb_xrm_database_free(i32* %17)
  br label %19

19:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32* @xcb_xrm_database_from_default(i32) #1

declare dso_local i32 @__config_parse_xresource_options(i32*, i32) #1

declare dso_local i32 @__config_parse_xresource_options_dynamic(i32*, i32) #1

declare dso_local i32 @xcb_xrm_database_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
